# blog-code

python-for-data-science-exploring-the-syntax/: main.py  pyproject.toml
